Fix: Add ellipsis for overflowing text

--- a/src/App.scss
+++ b/src/App.scss
@@ -4105,10 +4105,16 @@ footer {
         display: flex;
         flex-direction: column;
         height: 100%;
+        min-width: 0;
         pointer-events: none;
         position: relative;
         white-space: nowrap;
         width: 100%;
+
+        > * {
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
 
         .name {
           color: #343a40ee;
